# trading

./: .gitignore  README.md  SETUP_ENV.md  STRATEGY_OVERVIEW.md  check_db.py  check_hl_balance.py  check_trades.py  env.example  pyproject.toml  requirements-windows.txt  requirements.txt  run_arbitrage_bot.py  run_binance_to_kraken_eth_arb.py  run_btc_spot_perp.py  run_eth_spot_perp.py  run_live_cex_arbitrage.py  run_live_eth.py  run_live_test.py  run_monitoring_bot.py  run_paper_test.py  run_spot_perp_strategy.py  show_trade.py  start_monitoring.py  test_binance_connection.py  test_config.py  test_okx_connection.py  test_realistic_trading.py  test_spot_perp.py
docker/: Dockerfile  docker-compose.yaml
src/: __init__.py  config.py  main.py
src/alerts/: __init__.py  integration_example.py  telegram.py  trading_dashboard.py
src/backtest/: __init__.py  recorder.py  replay.py  sim.py
src/core/: __init__.py  depth_analysis.py  detector.py  executor.py  inventory.py  monitor.py  portfolio.py  quotes.py  risk.py  session.py  symbols.py  triangle.py  types.py  utils.py
src/exchange/: __init__.py  binance.py  fees.py  filters.py
src/exchanges/: __init__.py  base.py  binance.py  depth_model.py  filters.py  hyperliquid.py  kraken.py  okx.py
src/notify/: __init__.py  telegram_readonly.py
src/storage/: __init__.py  db.py  journal.py  models.py
src/strategies/: __init__.py  orchestrator.py  strategy_factory.py
src/strategies/spot_perp/: README.md  __init__.py  detector.py  planner.py  runner.py
tests/: __init__.py  sample_data.py  test_basic.py  test_depth_model.py  test_filters.py  test_spot_perp_basic.py  test_triangle_math.py
